# ssp-landwaterstorage

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: docker.yaml  pythonpackage.yaml
modules/ssp/landwaterstorage/: ssp_postprocess_landwaterstorage.py
src/ssp_landwaterstorage/: AssignFP.py  __init__.py  cli.py  core.py  io.py  service.py  ssp_landwaterstorage_fit.py  ssp_landwaterstorage_postprocess.py  ssp_landwaterstorage_preprocess.py  ssp_landwaterstorage_project.py
tests/: test_core.py  test_io.py  test_placeholder.py
